# BTPC2

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  apply_fixes_v2.sh  apply_fixes_v3.sh  btpc2_repo_patch.sh  btpc_blockchain_setup.sh  build_logger.rs  clippy.toml  clippy.toml.bak  comprehensive_fix.sh  corrected_fix.sh  final_fix.sh  fix_cargo_toml.sh  fix_corruption.sh  fix_delimiter.sh  fix_delimiter_protocol.sh  fix_errors.sh  fix_merkle_method.sh  fix_script.sh  fix_script_corrected.sh  harden_repo.sh  pre-commit.sample  rust_ci.yml
.github/workflows/: rust.yml
config/: mainnet.toml  regtest.toml  testnet.toml
src/: config.rs  error.rs  lib.rs  main.rs
src/blockchain/: block.rs  chain.rs  mod.rs  reward.rs
src/blockchain/merkle/: mod.rs
src/consensus/: difficulty.rs  mod.rs  pow.rs
src/crypto/: merkle.rs  mod.rs  protocol.rs  sha512.rs  signatures.rs  sync.rs  utxo_set.rs
src/database/: mod.rs  rocksdb.rs  utxo_set.rs
src/network/: mod.rs  p2p.rs  protocol.rs  sync.rs  sync_helpers.rs
